--- a/app/components/Printersetup.css
+++ b/app/components/Printersetup.css
@@ -10,22 +10,28 @@ div {
     margin: 0;
 }
 
+.setup{
+    font-size: 57px;
+    font-family: "Poppins", sans-serif;
+}
+
 .printer-setup {
     background-color: rgba(28, 141, 206, 0.93);
     color: #fff;
     display: flex;
     align-items: center;
-    height: 900px;
+    height: 403px;
     overflow: hidden;
     flex-direction: column;
     margin-top: 60px;
 }
 
 .text-content {
+    font-family: "Poppins", sans-serif;
     margin-left: 113px;
-    font-size: 30px;
+    font-size: 24px;
     margin-bottom: 60px;
-    margin-top: -333px;
+    margin-top: 51px;
 }
 
 .printer-setup h1 {
@@ -72,12 +78,11 @@ div {
 
 
 .printer-image {
-    width: 703px;
-    height: 703px;
+    width: 600px;
+    height: 432px;
     padding: 91.1875px;
-    margin-left: 459px;
     object-fit: cover;
-    margin-top: -333px;
+    margin-top: 12px;
   
 
 
@@ -101,6 +106,7 @@ div {
         width: 100%;
         max-width: 200px; /* Ensure button width is reasonable */
         margin: 20px 0;
+        font-family: "Poppins", sans-serif;
     }
 }
 
@@ -109,6 +115,7 @@ div {
     .text-content {
         font-size: 1.2rem;
         padding: 20px;
+        font-family: "Poppins", sans-serif;
     }
 
     .printer-image {
@@ -122,6 +129,7 @@ div {
         width: 100%;
         max-width: 250px; /* Ensure button width fits well */
         margin: 20px 0;
+        font-family: "Poppins", sans-serif;
     }
 }
 
@@ -130,6 +138,7 @@ div {
     .text-content {
         font-size: 1.5rem;
         padding: 30px;
+        font-family: "Poppins", sans-serif;
     }
 
     .printer-image {
@@ -143,6 +152,7 @@ div {
         width: 100%;
         max-width: 300px; /* Ensure button width fits well */
         margin: 30px 0;
+        font-family: "Poppins", sans-serif;
     }
 }
 
@@ -152,21 +162,25 @@ div {
         flex-direction: row;
         justify-content: space-between;
         padding: 40px 80px;
+       
     }
 
     .text-content {
         font-size: 1.8rem;
         width: 50%; /* Ensure the text content has adequate space */
+        font-family: "Poppins", sans-serif;
     }
 
     .printer-image {
         max-width: 669px; /* Ensure image doesn't exceed container width */
         height: auto; /* Maintain aspect ratio */
+        
     }
 
     .btn {
         font-size: 1.2rem;
         padding: 12px 24px;
         max-width: none; /* Remove width restriction */
+        font-family: "Poppins", sans-serif;
     }
 }
