--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,12 @@
   }
 }
 
+
+body {
+  font-family: "Poppins", sans-serif; 
+}
+
+
 body {
   color: var(--foreground);
   background: var(--background);
